# Tap

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp  manager.cpp  manager.h  package.cpp  test.cpp
src/: main.cpp  test.cpp
src/classes/: crypto.cpp  crypto.h  manager.cpp  manager.h  package.cpp  package.h  remote.cpp  remote.h
